# tpl-python-template

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
project_name/: __main__.py
subproject_1_name/src/app/: main.py
