[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.0.0"
description = "Python template description"
# dependencies = [
#     "example1>=1.11.0",
#     "example2",
# ]

[project.scripts]
project-app = "project_name.src.app.main:main_function"
# project-app2 = "project_name2.src.app.main:main_function"

# [tool.setuptools]
# packages = ["project-app", "project-app2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
