[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.0.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
description = "Python template description"
# dependencies = [
#     "example1==1.11.0",
#     "example2==1.0.0",
# ]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
]

[project.scripts]
subproject-1-app = "subproject_1_name.src.app.main:main_function"
# subproject-2-app = "subproject_2_name.src.app.main:main_function"

[tool.setuptools]
packages = ["subproject_1_name"]
# packages = ["subproject_1_name", "subproject_2_name"]

[tool.pytest.ini_options]
testpaths = ["test"]
